--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 @import "src/@fuse/scss/fuse";
+@import "src/variable.scss";
 
 body {
 
@@ -24,6 +25,7 @@ body {
 }
 
 fuse-sidebar {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.35);
 
     &.folded:not(.unfolded) {
 
@@ -64,7 +66,7 @@ fuse-navbar {
             min-height: 64px;
             padding: 0 16px 0 24px;
             transition: padding 200ms ease;
-            background-color: rgba(255, 255, 255, .05);
+            background-color: map-get($colors,primary-red);
             @include mat-elevation(1);
 
             .logo {
@@ -87,6 +89,7 @@ fuse-navbar {
 
         .navbar-content {
             flex: 1;
+            background-color: #222222;
         }
     }
 }
