--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -20,8 +20,9 @@
                 </div>
             </div>
 
-            <div class="px-8 px-mat-16">
-                <fuse-shortcuts [navigation]="navigation"></fuse-shortcuts>
+            <div class="px-8 px-mat-16" fxFlex="50">
+                <toolbar-search></toolbar-search>
+                <!-- <fuse-shortcuts [navigation]="navigation"></fuse-shortcuts>-->            
             </div>
 
         </div>
@@ -56,36 +57,8 @@
 
             </mat-menu>
 
-            <div class="toolbar-separator"></div>
-
-            <fuse-search-bar (onInput)="search($event)"></fuse-search-bar>
-
-            <div class="toolbar-separator"></div>
-
-            <button mat-button fxHide fxShow.gt-xs
-                    class="language-button"
-                    [matMenuTriggerFor]="languageMenu">
-                <div fxLayout="row" fxLayoutAlign="center center">
-                    <img class="flag mr-8" [src]="'assets/images/flags/'+selectedLanguage.flag+'.png'">
-                    <span class="iso text-uppercase">{{selectedLanguage.id}}</span>
-                </div>
-            </button>
-
-            <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
-
-                <button mat-menu-item *ngFor="let lang of languages" (click)="setLanguage(lang)">
-                    <div fxLayout="row" fxLayoutAlign="start center">
-                        <img class="flag mr-16" [src]="'assets/images/flags/'+lang.flag+'.png'">
-                        <span class="iso">{{lang.title}}</span>
-                    </div>
-                </button>
-
-            </mat-menu>
-
-            <div class="toolbar-separator" fxHide fxShow.gt-xs></div>
-
             <button mat-icon-button
-                    class="quick-panel-toggle-button"
+                    class="quick-panel-toggle-button no-radius"
                     fuseMatSidenavToggler="quick-panel"
                     aria-label="Toggle quick panel">
                 <mat-icon class="icon">format_list_bulleted</mat-icon>
