--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -5,13 +5,12 @@
         <div class="navbar-header">
 
             <div class="logo">
-                <img class="logo-icon" src="assets/images/logos/fuse.svg">
-                <span class="logo-text">FUSE</span>
+                <img class="logo-icon" src="assets/images/ayo/ayo-logo.svg">
             </div>
 
             <button mat-icon-button class="toggle-button-navbar"
                     (click)="toggleSidebarFolded()" fxHide.lt-lg>
-                <mat-icon>menu</mat-icon>
+                <mat-icon class="small-top">arrow_back</mat-icon>
             </button>
 
             <button mat-icon-button class="toggle-button-navbar"
