--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -74,8 +74,8 @@ fuse-navbar {
                 align-items: center;
 
                 .logo-icon {
-                    width: 38px;
-                    height: 38px;
+                    width: 70px;
+                    height: 31px;
                 }
 
                 .logo-text {
@@ -84,6 +84,9 @@ fuse-navbar {
                     font-weight: 300;
                     letter-spacing: 0.4px;
                 }
+            }
+            .small-top{
+                font-size: 12px;
             }
         }
 
