login page splash screen edit

--- a/src/variable.scss
+++ b/src/variable.scss
@@ -6,7 +6,7 @@
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 $img-placeholder-background: transparent;
-$font-family-base: "Open Sans", sans-serif !default;
+$font-family-base: "Proxima Nova", sans-serif !default;
 
 $text-input-highlight-color-valid: #222d65;
 $text-input-highlight-color-invalid: #f44336;
