--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,35 +1,43 @@
 @import "src/@fuse/scss/fuse";
 @import "src/variable.scss";
+@import "src/backgroundslide.scss";
 @import '~@angular/material/theming';
 
 :host{
+
 	#ayoLogin{
 		width: 100%;
-		background:url('/assets/images/ayo/login-bg.jpg') no-repeat;
+		position: relative;
+		z-index: 1;
+		// background:url('/assets/images/ayo/login-bg.jpg') no-repeat center center;
 		background-size: cover;
 		.lgn-container{
 			text-align: center;
 			.lgn-box{
-				height: 620px;
-				width: 420px;
+				// height: 620px;
+				width: 100%;
+				max-width: 420px;
+				margin: 0 auto;
 				background:#fff;
 				border-radius: 8px;
+				padding-top: 38px;
+				padding-bottom: 38px;
 				.top{
-					padding-top: 38px;
 					.title{
 						padding-top: 30px;
+						font-size: 14px;
 					}
 				}
 				.middle-form{
 					margin: 0 50px;
-					padding-top: 45px;
+					padding-top: 20px;
 					form{
 						div.label{
 							text-align: left;
 						    position: relative;
-						    top: 20px;
+						    top: 15px;
 						    font-weight: bold;
-						    font-size: 12px;
+						    font-size: 14px;
 						}
 						mat-form-field{
 						width: 100%;
@@ -39,12 +47,70 @@
 					.remember-forgot-password{
 						padding-top: 20px;
 					}
+
 					a.forgot-password{
 						color:#000;
-						font-weight: bold;
+						font-weight: normal;
+						font-size: 14px;
+						line-height: 24px;
+					}
+
+					.remember-me{
+						font-size: 14px;
+					}
+
+					.login-button{
+						margin-top: 30px;
+						text-align: center;
+						button{
+							background: $primary-red;
+							color: #fff;
+							display: block;
+							width: 100%;
+							margin: 0 auto;
+						}
+					} 	
+
+				}
+			}
+
+			&.text-container{
+				text-align: left;
+				color: #fff;
+				padding-left: 50px;
+				min-width: calc(100% - 800px);
+
+				h2{
+					font-size: 21px;
+					font-weight: bold;
+					padding: 0 0 0;
+					margin: 0 0 10px;
+					letter-spacing: 0.5px;
+				}
+
+				h1{
+					font-size: 64px;
+					font-weight: bold;
+					line-height: 42px;
+					padding: 0 0 0;
+					margin: 0 0 30px;
+					letter-spacing: 1px;
+				}
+
+				p{
+					font-size: 18px;
+					line-height: 25px;
+					margin-bottom: 20px;
+
+					.mat-icon{
+						vertical-align: middle;
+						margin-right: 10px;
 					}
 				}
 			}
 		}
+
+
+
 	}
 }
