--- a/src/global.scss
+++ b/src/global.scss
@@ -6,3 +6,14 @@
 
   background-color:map-get($colors,primary-red) !important;
 }
+
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background{
+  background-color:map-get($colors,primary-red) !important;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-label,
+.mat-form-field-label{
+  font-weight: bold !important;
+  font-size: 14px !important;
+  color:rgba(0,0,0,1) !important;
+}
