--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,40 +8,42 @@
 </ul>
 <div id="ayoLogin" fxLayout="row" fxLayoutAlign="center center">
 	<div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
-			<div class="lgn-box">
-				<div class="top">
-					<img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
-					<div class="title">Sign into your account</div>
-				</div>
-				<div class="middle-form">
-					<form name="form" [formGroup]="loginForm">
-						<div class="label">Phone Number</div>
-						<div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
-							<mat-form-field fxFlex="100" class="form-primary">
-									<span matPrefix>+62 &nbsp;</span>
-								<input matInput  required>
-							</mat-form-field>
-						</div>
+		<div class="lgn-box">
+			<div class="top">
+				<img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
+				<div class="title">Sign into your account</div>
+			</div>
+			<div class="middle-form">
+			
+				<form name="form" [formGroup]="loginForm">
 
-						<div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-							<mat-form-field class="form-primary">
-								<input matInput type="password" placeholder="Password">
-							</mat-form-field>
-						</div>
+					<div class="label">Email</div>
+					<div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
+						<mat-form-field fxFlex="100" class="form-primary">
+							<input matInput  required>
+						</mat-form-field>
+					</div>
 
-						<div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column"
-						fxLayoutAlign="space-between center">
-							<mat-checkbox class="remember-me red" aria-label="Remember Me">
-								Remember Me
-							</mat-checkbox>
-							<a class="forgot-password" [routerLink]="'/pages/auth/forgot-password'">
-								Forgot Password?
-							</a>
-						</div>
-						<div class="login-button" fxLayout="row">
-							<button mat-raised-button aria-label="Login" type="button" color="primary-red">Login</button>
-						</div>
+					<div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+						<mat-form-field class="form-primary">
+							<input matInput type="password" placeholder="Password">
+						</mat-form-field>
+					</div>
+
+					<div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+						<mat-checkbox class="remember-me red" aria-label="Remember Me">
+							Remember Me
+						</mat-checkbox>
+						<a class="forgot-password" [routerLink]="'/forgot-password'">
+							Forgot Password?
+						</a>
+					</div>
+
+					<div class="login-button" fxLayout="row">
+						<button mat-raised-button aria-label="Login" type="button" color="primary-red" [routerLink]="'/dashboard'">Login</button>
+					</div>
 				</form>
+				
 			</div>
 		</div>
 	</div>
