--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -50,7 +50,7 @@
                     <span>Inbox</span>
                 </button>
 
-                <button mat-menu-item class="">
+                <button mat-menu-item [routerLink]="'/login'">
                     <mat-icon>exit_to_app</mat-icon>
                     <span>Logout</span>
                 </button>
