--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <div class="navbar-header">
 
             <div class="logo">
-                <img class="logo-icon" src="assets/images/ayo/ayo-logo.svg">
+                <img class="logo-icon" src="assets/images/ayo/ayo-logo-grey.png" srcset="assets/images/ayo/ayo-logo-grey@2x.png 2x">
             </div>
 
             <button mat-icon-button class="toggle-button-navbar"
