--- a/src/variable.scss
+++ b/src/variable.scss
@@ -22,7 +22,10 @@ $text-input-highlight-color-invalid: #f44336;
 
 $colors: (
   primary-red: #BB130F,
-  white: #fff
+  white: #fff,
+  primary-green: #388E3C,
+  primary-light-red:#F44336,
+  confirmation-button:#DC1E2D
 );
 
 $primary-red:#BB130F
