--- a/src/app/pages/user-management/field-force/create/field-force-create.component.html
+++ b/src/app/pages/user-management/field-force/create/field-force-create.component.html
@@ -1,3 +1,114 @@
-<p>
-  field-force-create works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Buat Field Force'">
+  </page-content-header>
+  <!-- / HEADER -->
+  <div class="content p-24">
+    <div class="vertical-stepper-wrapper is-thirdquart is-half">
+
+      <!-- VERTICAL STEPPER EXAMPLE -->
+      <mat-vertical-stepper class="mat-elevation-z4" [linear]="true">
+
+        <mat-step [stepControl]="verticalStepperStep1">
+
+          <form [formGroup]="verticalStepperStep1">
+
+            <ng-template matStepLabel>Informasi Dasar</ng-template>
+
+            <div fxFlex="1 0 auto" fxLayout="column">
+
+              <mat-form-field fxFlex="100" class="is-light">
+                <input matInput type="text" placeholder="Nama" formControlName="name">
+                <mat-error *ngIf="verticalStepperStep1.controls['name'].hasError('required') && verticalStepperStep1.controls['name'].touched ">
+                  Nama harus diisi.
+                </mat-error>
+              </mat-form-field>
+
+              <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
+                <div class="label">Nomor Ponsel</div>
+                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
+                  <mat-form-field fxFlex="10" fxFlex.xs="30" class="form-primary">
+                    <input matInput value="+62" readonly>
+                  </mat-form-field>
+                  <mat-form-field fxFlex="90" fxFlex.xs="70" class="form-primary">
+                    <input matInput formControlName="phone">
+                  </mat-form-field>
+                </div>
+                <mat-error *ngIf="verticalStepperStep1.controls['phone'].hasError('required') && verticalStepperStep1.controls['phone'].touched ">
+                  Nomor Ponsel harus diisi.
+                </mat-error>
+              </div>
+            </div>
+
+            <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+                Lanjut
+              </button>
+            </div>
+
+          </form>
+
+        </mat-step>
+
+        <mat-step [stepControl]="verticalStepperStep2">
+
+          <form [formGroup]="verticalStepperStep2">
+
+            <ng-template matStepLabel>Wilayah</ng-template>
+
+            <div fxFlex="1 0 auto" fxLayout="column">
+              <mat-form-field fxFlex="100" class="is-light">
+                <mat-select placeholder="Area" formControlName="level_desc" (selectionChange)="selectionChange($event)">
+                  <mat-option *ngFor="let item of listLevel" [value]="item.level_desc">{{item.level_desc |
+                    toCapitalize}}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="verticalStepperStep2.controls['level_desc'].hasError('required') && verticalStepperStep2.controls['level_desc'].touched">
+                  Area harus diisi
+                </mat-error>
+              </mat-form-field>
+
+              <ng-container *ngIf="verticalStepperStep2.get('level_desc').value">
+                <dropdown-form [dataCb]="ObjectArea" [form]="verticalStepperStep2" (selectionChange)="onSelect($event)"></dropdown-form>
+              </ng-container>
+            </div>
+
+            <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+                Lanjut
+              </button>
+            </div>
+
+          </form>
+
+        </mat-step>
+
+        <mat-step>
+
+          <ng-template matStepLabel>Selesai</ng-template>
+
+          <div class="h2" fxLayout="row" fxLayoutAlign="center center">
+            Apakah anda yakin untuk menyelesaikan isian ini ?
+          </div>
+
+          <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+            <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="accent">
+              Kembali
+            </button>
+            <button mat-raised-button type="button" class="confirmation-button" (click)="submit()">
+              <ng-container *ngIf="submitting == false">
+                Selesai
+              </ng-container>
+              <ng-container *ngIf="submitting == true">
+                <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
+              </ng-container>
+            </button>
+          </div>
+
+        </mat-step>
+
+      </mat-vertical-stepper>
+      <!-- / VERTICAL STEPPER EXAMPLE -->
+
+    </div>
+  </div>
+</div>
