--- a/src/app/pages/user-management/field-force/index/field-force-index.component.html
+++ b/src/app/pages/user-management/field-force/index/field-force-index.component.html
@@ -23,7 +23,9 @@
       </div>
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
-        [selectionType]="'checkbox'" [limit]="10" [sorts]="[{prop: 'nama', dir: 'asc'},{prop: 'email', dir: 'asc'},{prop: 'role', dir: 'asc'},{prop: 'active_status', dir: 'asc'},{prop: 'last_login', dir: 'asc'}]">
+        [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
+        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'fullname', dir: 'asc'}]"
+        (select)="onSelect($event)">
 
         <ngx-datatable-column [width]="48" [canAutoResize]="false" [sortable]="true">
           <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
@@ -36,15 +38,14 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama" prop="nama">
+        <ngx-datatable-column name="Nama" prop="fullname">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit" (click)="directEdit(row)">{{row.nama}} </a>
+            <a class="direct-edit" (click)="directEdit(row)">{{row.fullname}} </a>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Email" prop="email" summary-template="activeCell"></ngx-datatable-column>
+        <ngx-datatable-column name="ID Karyawan" prop="username" summary-template="activeCell"></ngx-datatable-column>
 
-        <ngx-datatable-column name="Role" prop="role"></ngx-datatable-column>
         <ngx-datatable-column [width]="100" name="Status" prop="active_status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
@@ -56,7 +57,21 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Last Login" prop="last_login"></ngx-datatable-column>
+        <ngx-datatable-column name="Terakhir Masuk" prop="last_login">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.last_login | date:'dd/MM/yyyy HH:mm'}}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+            <div class="button-row pl-8">
+              <button mat-icon-button color="primary" (click)="deleteFf(row.id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
       </ngx-datatable>
     </div>
   </div>
