--- a/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
+++ b/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
@@ -1,7 +1,7 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Spanduk Online'">
-    <button style="width: 170px" [routerLink]="['/inapp-marketing','banner', 'create']" mat-raised-button type="button">
+    <button style="width: 170px" [routerLink]="['/advertisement','banner', 'create']" mat-raised-button type="button">
       <mat-icon>add</mat-icon> BUAT
     </button>
   </page-content-header>
