--- a/src/app/pages/inapp-marketing/landing-page/index/landing-page-index.component.html
+++ b/src/app/pages/inapp-marketing/landing-page/index/landing-page-index.component.html
@@ -1,8 +1,8 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Halaman Tujuan'">
-    <button style="width: 150px" [routerLink]="['/inapp-marketing','page', 'create']" mat-raised-button aria-label="Halaman Tujuan"
-      type="button">
+    <button style="width: 150px" [routerLink]="['/advertisement','landing-page', 'create']" mat-raised-button
+      aria-label="Halaman Tujuan" type="button">
       <mat-icon>add</mat-icon> BUAT BARU
     </button>
   </page-content-header>
