--- a/src/app/pages/inapp-marketing/landing-page/edit/landing-page-edit.component.html
+++ b/src/app/pages/inapp-marketing/landing-page/edit/landing-page-edit.component.html
@@ -1,3 +1,51 @@
-<p>
-  landing-page-edit works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Ubah Informasi Halaman'">
+  </page-content-header>
+
+  <div class="content p-24">
+    <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
+      <form autocomplete="off" [formGroup]="formPageGroup">
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="pb-24">
+          <h2 class="">Halaman Tujuan</h2>
+          <div>
+            <mat-form-field [class]="formPageGroup.get('status').value === 1 ? 'radius-select green' : 'radius-select red'">
+              <mat-select formControlName="status">
+                <mat-option *ngFor="let item of listStatus;" [value]="item.value">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="ayo-middle" fxLayout="column">
+          <div fxLayout="row">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput type="text" formControlName="title" placeholder="Nama Halaman">
+              <mat-error *ngIf="formPageError.title.required">
+                Nama Halaman harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="pt-8" fxLayout="row" fxLayoutAlign="start center">
+            <h3 class="">Isi Halaman</h3>
+          </div>
+          <textarea [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+          <div class="pt-48 pb-16">
+            <div *ngIf="files && ['image/gif','image/png','image/jpeg'].indexOf(files.type)>=0">
+              <div class="">
+                <div class="deleteBanner">
+                  <mat-icon style="cursor: pointer;" (click)="removeImage()">cancel_outline</mat-icon>
+                </div>
+                <div class="previewBanner" [ngfBackground]="files"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+          <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+            SIMPAN
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
