--- a/src/app/pages/user-management/field-force/create/field-force-create.component.html
+++ b/src/app/pages/user-management/field-force/create/field-force-create.component.html
@@ -31,7 +31,7 @@
                     <input matInput value="+62" readonly>
                   </mat-form-field>
                   <mat-form-field fxFlex="90" fxFlex.xs="70" class="form-primary">
-                    <input matInput formControlName="phone">
+                    <input matInput formControlName="phone" numeric-only>
                   </mat-form-field>
                 </div>
                 <mat-error *ngIf="verticalStepperStep1.controls['phone'].hasError('required') && verticalStepperStep1.controls['phone'].touched ">
@@ -58,12 +58,12 @@
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <mat-select placeholder="Area" formControlName="level_desc" (selectionChange)="selectionChange($event)">
+                <mat-select placeholder="Wilayah" formControlName="level_desc" (selectionChange)="selectionChange($event)">
                   <mat-option *ngFor="let item of listLevel" [value]="item.level_desc">{{item.level_desc |
                     toCapitalize}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep2.controls['level_desc'].hasError('required') && verticalStepperStep2.controls['level_desc'].touched">
-                  Area harus diisi
+                  Wilayah harus diisi
                 </mat-error>
               </mat-form-field>
 
